# check-branch-name

./: .pre-commit-hooks.yaml  AUTOINDEX.md  README.md  pyproject.toml  setup.cfg
check_branch_name/: check-branch-name.py
pre_commit_hooks/: check_doc_acl.py  gen_docs_autoindex.py
