[tool.poetry]
name = "pre-commit-hooks"
version = "v0.0.1"
description = "Commit hook for validate branch name"
authors = ["devops <ops@clickadu.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.0.0"

[tool.poetry.scripts]
check_branch_name = "pre_commit_hooks.check_branch_name:main"
check_doc_acl = "pre_commit_hooks.check_doc_acl:main"
gen_doc_autoindex = "pre_commit_hooks.gen_doc_autoindex:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"