[metadata]
name = check_branch_name
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andreineustroev/check-branch-name
author = Neustroev Andrei
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.5.1

[options.entry_points]
console_scripts =
    check-branch-name = check-branch-name.check-branch-name:main
