[metadata]
name = pre-commit-hooks
url = https://github.com/WinnerSoftLab/pre-commit-hooks

[options]
packages = find:
python_requires = >=3.5.1

[options.entry_points]
console_scripts =
    check_branch_name = "pre_commit_hooks.check_branch_name:main"
    check_doc_acl = "pre_commit_hooks.check_doc_acl:main"
    gen_doc_autoindex = "pre_commit_hooks.gen_doc_autoindex:main"
